<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_FileLc_SysInfo" Id="{af72ba8f-a9fc-42b0-b11e-ee0796a0d3e8}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE T_FileLc_SysInfo :
STRUCT
	strPathName : STRING[FileLc.cPATH_LENGTH]; (*device name for config - file*)
	pBaseLogHandle : POINTER TO POINTER TO T_Queue_Info; // handle from BaseLog Init
	uinLogTyp : UINT; (* LogTyp*)
	udiMask : UDINT; (*actual log mask*)
	udiCylceTimeMs : UDINT; (*cycle time in milli seconds*)
	p_bytHeaderText : POINTER TO BYTE; (*Zeiger auf den Header Text*)
	udiHeaderTextLen : UDINT; (*Footer text len*)
	p_bytFooterText : POINTER TO BYTE; (*Zeiger auf den Footer Text*)
	udiFooterTextLen : UDINT; (*Footer text len*)
	p_bytTmpRecordText : POINTER TO BYTE; (*Zeiger auf den temporären Record - Text*)
	udiTmpRecordSize : UDINT; (*Grösse des temporären Record - Text*)
	udiTmpRecordLen : UDINT; (*Aktuelle Länge des temporären Record - Text*)
	bolTmpRecordFull : BOOL; (*temp record is full - text is full --> do write in file buffer*)
	stConfig : T_FileLc_SysCfg; (*config data*)
	stFileHandler : T_FileLc_FileHandler; (*Filehandler*)
	stItemInfo : T_FileLc_ItemInfo; (*Item-Infos --> <RECORD> Items.... </RECORD>*)
	stStatemachine : T_FileLc_Statemachine;
	fbFileLc_WorkOnFile : FB_FileLc_WorkOnFile;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>